Just need to add getLink